# studio-patcher

./: .gitignore  .gitmodules  README.md  package.json  pnpm-lock.yaml  vite.config.js
src-tauri/: .gitignore  Cargo.toml  build.rs  config.json  tauri.conf.json
src-tauri/src/: commands.rs  main.rs  patches.rs  state.rs  stream.rs
src-tauri/src/binary/: coff_header.rs  dos_header.rs  mod.rs  optional_header.rs  pattern.rs  section.rs  sections.rs
src-tauri/src/binary/optional_header/: coff_fields.rs  data_directories.rs  win_fields.rs
src-tauri/src/binary/scanner/: mod.rs
src-tauri/src/commands/: install_patches.rs  install_version.rs  register_schema.rs  register_server.rs  request_state.rs  restore_binary.rs
src-tauri/src/commands/install_version/: AppSettings.xml  file_map.rs  lib.rs
src-tauri/src/patches/: extended_explorer.rs  internal_studio.rs  lib.rs  themes.rs
src-tauri/src/patches/extended_explorer/: mod.rs
src-tauri/src/patches/http_spy/: mod.rs
src-tauri/src/patches/internal_studio/: mod.rs
src-tauri/src/patches/themes/: lib.rs  mod.rs
src-tauri/src/scanner/: mod.rs  pattern.rs
src-tauri/src/server/: mod.rs
src-tauri/src/server/http/: mod.rs
src-tauri/src/server/raknet/: mod.rs
src-tauri/src/server/raknet/lib/: enums.rs  macros.rs  mod.rs  structs.rs  types.rs
src-tauri/src/server/raknet/lib/types/: system_address.rs
src-tauri/src/server/raknet/packet/: lib.rs  mod.rs
src-tauri/src/server/raknet/packet/lib/: packets.rs
src-tauri/src/server/raknet/packet/lib/packets/: lib.rs  packet_10.rs  packet_81.rs  packet_83_04.rs  packet_83_05.rs  packet_83_06.rs  packet_83_10.rs  packet_84.rs  packet_93.rs  (+1 more)
test-client/: Cargo.toml
test-client/src/: main.rs  session.rs  stream.rs
(+45 files in other folders)
