[package]
name = "studio-patcher"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.26.0", features = ["full"] }
lazy_static = "1.4.0"
positioned-io = "0.3.1"
num-traits = "0.2.15"
object = { version = "0.30.3", features = ["write"] }
iced-x86 = "1.18.0"
reqwest = "0.11.16"
hyper = { version = "0.14.26", features = ["server"] }
spdlog-rs = "0.3.8"
base64-url = "2.0.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
