[package]
name = "test-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
num-derive = "0.3.3"
num-traits = "0.2.15"
reqwest = "0.11.18"
spdlog-rs = "0.3.8"
tokio = { version = "1.28.2", features = ["full"] }
